Create RestApplicationTests, README.md, remove some warnings